--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <textarea class="form-control" name="output" id="output" readonly></textarea>
       </div>
     </div>
-    <script src="./src/index.ts"></script>
+    <script src="src/index.ts"></script>
   </div>
 </body>
 
